Code formatting, and minor bug fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,11 +44,18 @@
     <string name="ourSolution">&#160; Наше решење: &#160;</string>
     <string name="transparentColor">#00000000</string>
     <string name="redColor">#FF0000</string>
+    <string name="columnA">Колона А</string>
+    <string name="columnB">Колона Б</string>
+    <string name="columnC">Колона Ц</string>
+    <string name="columnD">Колона Д</string>
+    <string name="finalSolution">Коначно решење</string>
+    <string name="message">Порука</string>
     <string name="greenColor">#00FF00</string>
     <string name="grayColor">"#FFE57C"</string>
     <string name="question">Питање &#160;</string>
     <string name="correctAnswer">Тачно.</string>
     <string name="wrongAnswer">Нетачно.</string>
+    <string name="settingsParameters">Параметри за онлајн игру</string>
     <string name="finalSolutionGame6">Коначно решење:&#160;</string>
     <string name="colorBackground">Боја позадине</string>
     <string name="color1">#03A9F4</string>
@@ -66,6 +73,7 @@
     <string name="color13">#990f02</string>
     <string name="color14">#32CD32</string>
     <string name="backgroundColorKey">backgroundColor</string>
+    <string name="zero">0</string>
     <string name="usernameKey">username</string>
     <string name="nameKey">name</string>
     <string name="lastnameKey">lastname</string>
@@ -79,12 +87,18 @@
     <string name="name">Име:&#160;</string>
     <string name="lastname">Презиме:&#160;</string>
     <string name="username">Корисничко име:&#160;</string>
-    <string name="search">Претражи...</string>
+    <string name="name_">Име</string>
+    <string name="lastname_">Презиме</string>
+    <string name="username_">Корисничко име</string>
+    <string name="search">Претражи…</string>
     <string name="challenge">Изазови</string>
     <string name="challenged">Изазов од:&#160;</string>
     <string name="pointsFirebase">points</string>
     <string name="gameInHistory">Пронађена игра од раније</string>
     <string name="newGame">Нова игра?</string>
+    <string name="endGame">Крај игре</string>
+    <string name="refusedGame">Игра је отказана</string>
+    <string name="userRefusedGame">Корисник је одбио изазов.</string>
     <string name="continueGame">"Настави?"</string>
     <string name="cancel">Откажи</string>
     <string name="challengedSomeone">challengedSomeone</string>
